# TrendRadar

./: .coverage  API_README.md  CHANGELOG.md  QUICKSTART.md  REFACTORING_SUMMARY.md  SHARED_TASK_NOTES.md  coverage.json  coverage.xml  pyproject.toml  pytest.ini  requirements-all.txt  requirements-core.txt  requirements-dev.txt  requirements-mcp.txt  requirements-storage.txt  setup.py  trendradar_api.py
examples/: simple_usage.py
tests/: README.md  __init__.py  test_analyzer.py  test_api.py  test_config.py  test_context.py  test_crawler.py  test_data.py  test_frequency.py  test_loader.py  test_rss.py  test_storage.py  test_storage_base.py  test_utils.py
trendradar/: __main__.py  context.py
trendradar/core/: analyzer.py  api.py  data.py  loader.py  models.py
trendradar/crawler/: fetcher.py
trendradar/crawler/rss/: parser.py
trendradar/notification/: dispatcher.py  push_manager.py  senders.py  splitter.py
trendradar/storage/: __init__.py  base.py  manager.py
